[package]
name = "html-extractor"
version = "0.1.0"
authors = ["mkihr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
html-extractor-macros = { path = "./html-extractor-macros" }
scraper = "0.11.0"
lazy_static = "1.4.0"
regex = "1.3.7"
failure = "0.1.7"

[dev-dependencies]
# for proc_macro_crate to be able to refer to this crate in the tests
html-extractor = { path = "" }
