[package]
name = "html-extractor-macros"
version = "1.0.0"
authors = ["mkihr"]
edition = "2018"
description = "This crate is for crate html-extractor"
repository = "https://github.com/mkihr-ojisan/html-extractor"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = "1.0.17"
quote = "1.0.3"
proc-macro2 = "1"
proc-macro-crate = "0.1.4"
lazy_static = "1.4.0"
ref_thread_local = "0.0.0"
regex = "1.3.7"
scraper = "0.11.0"
proc-macro-error = "1.0.2"

[lib]
proc-macro = true
