[package]
name = "html-extractor"
version = "0.2.0"
authors = ["mkihr"]
edition = "2018"
description = "A Rust crate for extracting data from HTML"
keywords = ["web", "scraping"]
categories = ["web-programming"]
repository = "https://github.com/mkihr-ojisan/html-extractor"
license = "MIT"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
html-extractor-macros = { path = "../html-extractor-macros", version = "=0.2.0" }
scraper = "0.11.0"
lazy_static = "1.4.0"
regex = "1.3.7"
failure = "0.1.7"

[dev-dependencies]
# for proc_macro_crate to be able to refer to this crate in the tests
html-extractor = { path = "" }
